--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -199,6 +199,17 @@
         android:layout_marginTop="25dp"
         android:text="0" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="."
+        android:id="@+id/Point"
+        android:onClick="point"
+        android:layout_alignBaseline="@+id/number0"
+        android:layout_alignBottom="@+id/number0"
+        android:layout_toRightOf="@+id/number0"
+        android:layout_toEndOf="@+id/number0"/>
 
 
 </RelativeLayout>
